@@ -4,7 +4,7 @@ exec tclsh "$0" ${1+"$@"}
 
 # $Id$
 #
-# Test string operators
+# Test scalar definitions and operations
 #
 
 package require tcltest 2.2
